--- a/source/index.html
+++ b/source/index.html
@@ -24,6 +24,30 @@
   </head>
   <body>
     @@include('blocks/header.html')
+    <div class="chat">
+      <div class="chat__head">
+        <p class="chat__title">ChemDry Chat</p>
+        <p class="chat__subtitle">Chat with an anonymous person</p>
+        <button class="chat__cross">X</button>
+      </div>
+      <div class="chat__message">
+        <div class="chat__message-content">
+          <p class="chat__message-right">Oh, you better not know, since we are learning a very complicated topic on how to create cool animations in CSS.</p>
+        </div>
+        <div class="chat__message-content">
+          <p class="chat__message-left">Cool! Can you teach me too?</p>
+        </div>
+        <div class="chat__message-content">
+          <p class="chat__message-right">No, I won’t just teach you, come to us for courses at DL Academy and then you will not be taught this!</p>
+        </div>
+        <div class="chat__message-content">
+          <p class="chat__message-left">Damn, I was hoping so, well, I’ll start walking soon, see you!</p>
+        </div>
+        <div class="chat__message-content">
+          <p class="chat__message-right">Good, all the best.</p>
+        </div>
+      </div>
+    </div>
     <main class="main">
       <section class="banner">
         <div class="container">
