--- a/source/contact.html
+++ b/source/contact.html
@@ -23,35 +23,7 @@
     <!-- endbuild -->
   </head>
   <body>
-    <header class="header container">
-      <ul class="header__list">
-        <li class="header__list-item">
-          <a class="header__list-link" href="/"
-            ><img src="../img/logo.png" alt="Logo" class="logo"
-          /></a>
-        </li>
-        <li class="header__list-item">
-          <a class="header__list-link" href="#">Catalog</a>
-        </li>
-        <li class="header__list-item">
-          <a class="header__list-link" href="#">Servises</a>
-        </li>
-        <li class="header__list-item">
-          <a class="header__list-link" href="#">Blog</a>
-        </li>
-        <li class="header__list-item">
-          <a class="header__list-link" href="#">About Us</a>
-        </li>
-      </ul>
-      <ul class="header__list-contact">
-        <li class="header__list-item">
-          <a class="header__list-link--phone" href="#">789-254-14</a>
-        </li>
-        <li class="header__list-item">
-          <a class="header__list-link--contact" href="#">Contact us</a>
-        </li>
-      </ul>
-    </header>
+    @@include('blocks/header.html')
     <main>
       <div class="container">
         <h1 class="title">Contact Us</h1>
