--- a/source/index.html
+++ b/source/index.html
@@ -24,6 +24,17 @@
   </head>
   <body>
     @@include('blocks/header.html')
+    <div class="container">
+      <div class="grid">
+        <div class="grid__box grid__box1">#A322F1</div>
+        <div class="grid__box grid__box2">#C4C4C4</div>
+        <div class="grid__box grid__box3">#22CCF1</div>
+        <div class="grid__box grid__box4">#F19E22</div>
+        <div class="grid__box grid__box5">#EF6A6A</div>
+        <div class="grid__box grid__box6">#008752</div>
+      </div>
+    </div>
+
     <!-- <svg
       class="smile"
       width="80"
@@ -214,7 +225,7 @@
             <li class="maps__list-item">@@include('blocks/link.html')</li>
           </ul>
         </div>
-        <iframe
+        <!-- <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2372.5371506304455!2d49.28814455158159!3d53.51246307991602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x416879a82611632d%3A0xb18d94ffcf91e387!2sDL%20Academy!5e0!3m2!1sru!2sru!4v1675094726939!5m2!1sru!2sru"
           width="600"
           height="450"
@@ -222,11 +233,14 @@
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+        ></iframe> -->
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18975.652850232593!2d49.2872736!3d53.522831849999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x416879a4980da0df%3A0x77e0cbb9aa2f0354!2z0JrQsNC90YLQuNC90LAg0JzRg9C60LA!5e0!3m2!1sru!2sru!4v1682521482243!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A96f2a87959686a46d7ad222888f2dd1d124400952220300d48907b15a47936b2&amp;source=constructor" width="500" height="400" frameborder="0"></iframe>
       </section>
     </main>
     @@include('blocks/popup.html')
     <script src="/js/index.js"></script>
+    <script src="/js/Object.js"></script>
     <script src="js/app.js" defer></script>
   </body>
 </html>
